[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recreational_rl"
version = "0.1.0"
description = "Recreational Reinforcement Learning exercises"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
]

[project.scripts]
run-gridworld = "gridworld.gridworld:run_gridworld"
run-windy = "gridworld.windy:run_windy"

[tool.hatch.build.targets.wheel]
packages = ["gridworld"]
